--- a/plants/index.html
+++ b/plants/index.html
@@ -11,6 +11,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./index.js"></script>
 
 </head>
@@ -32,6 +33,8 @@
                     <li class="navigation__element"><a href="#contacts">Contacts</a></li>
                 </ul>
             </nav>
+            <div class="header__hamburger">
+            </div>
         </div>
     </header>
     <main>
@@ -51,7 +54,7 @@
                     <h2 class="text text__primary">We are <span class="text text_secondary">professional experienced</span> gardeners</h2>
                     <p class="about_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
                 </div>
-                <img src="./img/about/houseplant.png" alt="houseplant" width="464">
+                <img class="about-picture" src="./img/about/houseplant.png" alt="houseplant" width="464">
             </div>
         </section>
         <section class="service" id="service">
@@ -124,13 +127,13 @@
                 <div class="left-side">
                     <h2>Our best <span class="text text__primary">gardeners</span> are ready to help you</h2>
                     <button class="button button_light">Contact us</button>
-                    <img src="img/prices/leafs_1.png" alt="leaf" width="160">
+                    <img class="price-leaf" src="img/prices/leafs_1.png" alt="leaf" width="160">
                 </div>
             </div>
         </section> 
         <section class="contacts" id="contacts" >
             <div class="wrapper contacts__wrapper">
-                <div class="contact__woman"><img src="./img/contacts/contact_woman.png" alt="woman" width="400"></div>
+                <div class="contact__woman"><img class="contact__woman-img" src="./img/contacts/contact_woman.png" alt="woman" ></div>
                 <div class="contact__header">
                     <h2 class="text text__primary">Contact us</h2>
                 </div> 
