--- a/index.html
+++ b/index.html
@@ -26,8 +26,12 @@
         <span class="temperature"></span>
         <span class="weather-description"></span>
       </div>
-      <div class="wind"></div>
-      <div class="humidity"></div>
+      <div class="wind">
+        <span class="wind-description"></span>
+      </div>
+      <div class="humidity">
+        <span class="humidity-description"></span>
+      </div>
     </div>
   </header>
   <main class="main">
@@ -49,6 +53,6 @@
       <div class="author"></div>
     </div>
   </footer>
-  <script src="js/script.js"></script>
+  <script src="src/js/script.js"></script>
 </body>
 </html>
