--- a/index.html
+++ b/index.html
@@ -62,10 +62,79 @@
     </div>
   </main>
   <footer class="footer">
-    <button class="change-quote"></button>
-    <div>
-      <div class="quote"></div>
-      <div class="author"></div>
+    <button class="settings-button"></button>
+    <div class="settings">
+      <div class="settings-row dotted">
+        <h2 class="A">Language:</h2>
+        <span class="B">eng</span>
+        <div class="settigs-toggle languge-toggle C">
+          <div class="circle"></div>
+        </div>
+        <span class="D">ru</span>
+      </div>
+      <div class="settings-row">
+        <h2 class="A">Show panel:</h2>
+        <span class="B">Clock</span>
+        <div class="settigs-toggle clock-toggle C">
+          <div class="circle"></div>
+        </div>  
+      </div>
+      <div class="settings-row">
+        <span class="B">Date</span>
+        <div class="settigs-toggle date-toggle C">
+          <div class="circle"></div>
+        </div>  
+      </div>
+      <div class="settings-row">
+        <span class="B">Greeting</span>
+        <div class="settigs-toggle greeting-toggle C">
+          <div class="circle"></div>
+        </div>  
+      </div>
+      <div class="settings-row">
+        <span class="B">Audio player</span>
+        <div class="settigs-toggle audio-toggle C">
+          <div class="circle"></div>
+        </div>  
+      </div>
+      <div class="settings-row">
+        <span class="B">Weather</span>
+        <div class="settigs-toggle weather-toggle C">
+          <div class="circle"></div>
+        </div>  
+      </div>
+      <div class="settings-row">
+        <span class="B">Quote</span>
+        <div class="settigs-toggle quote-toggle C">
+          <div class="circle"></div>
+        </div>  
+      </div>
+      <div class="settings-row dotted">
+        <span class="B">ToDo List</span>
+        <div class="settigs-toggle todo-toggle C">
+          <div class="circle"></div>
+        </div>  
+      </div>
+      <div class="settings-row">
+          <h2 class="A">Background:</h2>
+          <span class="B">eng</span>
+          <div class="settigs-toggle languge-toggle C">
+            <div class="circle"></div>
+          </div>
+          <span class="D">ru</span>
+        </div>
+    </div>
+    <div class="quote-block">
+      <button class="change-quote"></button>
+      <div>
+        <div class="quote"></div>
+        <div class="author"></div>
+      </div>
+    </div>
+    <div class="info-block">
+        <div class="info-block"><a href="https://rs.school/">RS School</a></div>
+        <span class="info-block year"> 2023 </span>
+        <a href="https://github.com/juli-ko?tab=overview&from=2023-02-01&to=2023-02-25"><div class="info-block github"></div></a>
     </div>
   </footer>
   <script src="src/js/script.js" type="module"></script>
