feat: settings part2

--- a/index.html
+++ b/index.html
@@ -74,54 +74,68 @@
       </div>
       <div class="settings-row">
         <h2 class="A">Show panel:</h2>
-        <span class="B">Clock</span>
+        <span class="B">Clock:</span>
         <div class="settigs-toggle clock-toggle C">
           <div class="circle"></div>
         </div>  
       </div>
       <div class="settings-row">
-        <span class="B">Date</span>
+        <span class="B">Date:</span>
         <div class="settigs-toggle date-toggle C">
           <div class="circle"></div>
         </div>  
       </div>
       <div class="settings-row">
-        <span class="B">Greeting</span>
+        <span class="B">Greeting:</span>
         <div class="settigs-toggle greeting-toggle C">
           <div class="circle"></div>
         </div>  
       </div>
       <div class="settings-row">
-        <span class="B">Audio player</span>
+        <span class="B">Audio player:</span>
         <div class="settigs-toggle audio-toggle C">
           <div class="circle"></div>
         </div>  
       </div>
       <div class="settings-row">
-        <span class="B">Weather</span>
+        <span class="B">Weather:</span>
         <div class="settigs-toggle weather-toggle C">
           <div class="circle"></div>
         </div>  
       </div>
       <div class="settings-row">
-        <span class="B">Quote</span>
+        <span class="B">Quote:</span>
         <div class="settigs-toggle quote-toggle C">
           <div class="circle"></div>
         </div>  
       </div>
       <div class="settings-row dotted">
-        <span class="B">ToDo List</span>
+        <span class="B">ToDo List:</span>
         <div class="settigs-toggle todo-toggle C">
           <div class="circle"></div>
         </div>  
       </div>
       <div class="settings-row">
           <h2 class="A">Background:</h2>
-          <span class="B">eng</span>
-          <div class="settigs-toggle languge-toggle C">
-            <div class="circle"></div>
+          <span class="B">Image resource:</span>
+          <div class="selection-block C">
+            <select class="select">
+              <option id="github">github</option>
+              <option id="unsplash">unsplash</option>
+              <option id="flickr">flickr</option>
+            </select>
           </div>
-          <span class="D">ru</span>
+        </div>
+      <div class="settings-row select-tag">
+          <span class="B">Image tag:</span>
+          <div class="selection-block C">
+            <select class="select ">
+              <option id="dayTime">time of day</option>
+              <option id="paris">paris</option>   
+              <option id="ocean">ocean</option>
+              <option id="forest">forest</option> 
+            </select>
+          </div>
         </div>
     </div>
     <div class="quote-block">
