--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <button class="settings-button"></button>
     <div class="settings">
       <div class="settings-row dotted">
-        <h2 class="A">Language:</h2>
+        <h2 class="A" id="word_lang">Language:</h2>
         <span class="B">eng</span>
         <div class="settigs-toggle languge-toggle C">
           <div class="circle"></div>
@@ -73,51 +73,51 @@
         <span class="D">ru</span>
       </div>
       <div class="settings-row">
-        <h2 class="A">Show panel:</h2>
-        <span class="B">Clock:</span>
+        <h2 class="A" id = "word_show">Show panel:</h2>
+        <span class="B" id = "word_clock">Clock:</span>
         <div class="settigs-toggle clock-toggle C">
           <div class="circle"></div>
         </div>  
       </div>
       <div class="settings-row">
-        <span class="B">Date:</span>
+        <span class="B" id ='word_date'>Date:</span>
         <div class="settigs-toggle date-toggle C">
           <div class="circle"></div>
         </div>  
       </div>
       <div class="settings-row">
-        <span class="B">Greeting:</span>
+        <span class="B" id="word_greeting">Greeting:</span>
         <div class="settigs-toggle greeting-toggle C">
           <div class="circle"></div>
         </div>  
       </div>
       <div class="settings-row">
-        <span class="B">Audio player:</span>
+        <span class="B" id ="word_audioplayer">Audio player:</span>
         <div class="settigs-toggle audio-toggle C">
           <div class="circle"></div>
         </div>  
       </div>
       <div class="settings-row">
-        <span class="B">Weather:</span>
+        <span class="B" id="word_weather">Weather:</span>
         <div class="settigs-toggle weather-toggle C">
           <div class="circle"></div>
         </div>  
       </div>
       <div class="settings-row">
-        <span class="B">Quote:</span>
+        <span class="B" id="word_quote">Quote:</span>
         <div class="settigs-toggle quote-toggle C">
           <div class="circle"></div>
         </div>  
       </div>
       <div class="settings-row dotted">
-        <span class="B">ToDo List:</span>
+        <span class="B" id="word_todo">ToDo List:</span>
         <div class="settigs-toggle todo-toggle C">
           <div class="circle"></div>
         </div>  
       </div>
       <div class="settings-row">
-          <h2 class="A">Background:</h2>
-          <span class="B">Image resource:</span>
+          <h2 class="A" id="word_background">Background:</h2>
+          <span class="B" id="word_resourse">Image resource:</span>
           <div class="selection-block C">
             <select class="select">
               <option id="github">github</option>
@@ -127,13 +127,13 @@
           </div>
         </div>
       <div class="settings-row select-tag">
-          <span class="B">Image tag:</span>
+          <span class="B" id="word_image">Image tag:</span>
           <div class="selection-block C">
             <select class="select ">
-              <option id="dayTime">time of day</option>
-              <option id="paris">paris</option>   
-              <option id="ocean">ocean</option>
-              <option id="forest">forest</option> 
+              <option id="word_dayTime">time of day</option>
+              <option id="word_paris">paris</option>   
+              <option id="word_ocean">ocean</option>
+              <option id="word_forest">forest</option> 
             </select>
           </div>
         </div>
